[gd_scene load_steps=9 format=3 uid="uid://cb2d8drfxcdqe"]

[ext_resource type="Script" uid="uid://duvib0msduhck" path="res://scripts/menu/Selection_mode_menu.gd" id="1_hbq5r"]
[ext_resource type="Texture2D" uid="uid://dxmyc4yt33l3b" path="res://assets/Background_images/meme-sheldon-cooper_.png" id="2_hbq5r"]
[ext_resource type="AudioStream" uid="uid://b27y8uwjrvonh" path="res://assets/audio/sfx/menu/button_click.ogg" id="3_4sgra"]
[ext_resource type="AudioStream" uid="uid://yinuh86st0n" path="res://assets/audio/sfx/menu/mouse_entered.ogg" id="4_a86st"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_l6cm7"]

[sub_resource type="Animation" id="Animation_bqqt6"]
length = 0.5
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("MarginContainer:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.0333333),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector2(-200, 0), Vector2(0, 0)]
}

[sub_resource type="Animation" id="Animation_ekxnf"]
resource_name = "reveal"
length = 1.3
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("background:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0.004, 0.3),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(1, 1, 1, 0), Color(1, 1, 1, 1)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("MarginContainer:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0.288568, 0.7),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector2(-1000, 0), Vector2(0, 0)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_wu84c"]
_data = {
&"RESET": SubResource("Animation_bqqt6"),
&"reveal": SubResource("Animation_ekxnf")
}

[node name="Select_menu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_hbq5r")

[node name="background" type="TextureRect" parent="."]
layout_mode = 0
offset_left = -19.9999
offset_right = 1300.0
offset_bottom = 720.0
texture = ExtResource("2_hbq5r")
expand_mode = 2
stretch_mode = 3

[node name="MarginContainer" type="ScrollContainer" parent="."]
layout_mode = 1
anchors_preset = -1
anchor_right = 0.42
anchor_bottom = 1.0
offset_left = -200.0
offset_right = 135.69958
offset_bottom = -145.25244
grow_horizontal = 2
grow_vertical = 2
scale = Vector2(0.999997, 0.99)

[node name="HBoxContainer" type="HBoxContainer" parent="MarginContainer"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 6

[node name="game_logo" type="TextureRect" parent="MarginContainer/HBoxContainer/VBoxContainer"]
visible = false
layout_mode = 2

[node name="sum" type="Button" parent="MarginContainer/HBoxContainer/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 4
theme_override_font_sizes/font_size = 50
text = "       Adição \"+\"     "

[node name="sum_normal" type="Button" parent="MarginContainer/HBoxContainer/VBoxContainer/sum"]
layout_mode = 0
offset_left = 423.00125
offset_right = 834.00134
offset_bottom = 77.00001
scale = Vector2(0.5346707, 0.5346707)
size_flags_horizontal = 4
theme_override_font_sizes/font_size = 50
text = "Normal"

[node name="sum_hard" type="Button" parent="MarginContainer/HBoxContainer/VBoxContainer/sum"]
layout_mode = 0
offset_left = 423.00128
offset_top = 45.454544
offset_right = 834.0012
offset_bottom = 122.454544
scale = Vector2(0.5346707, 0.5346707)
size_flags_horizontal = 4
theme_override_font_sizes/font_size = 50
text = "Difícil"

[node name="sum_rank" type="Label" parent="MarginContainer/HBoxContainer/VBoxContainer"]
layout_mode = 2
theme_override_colors/font_shadow_color = Color(0, 0, 0, 1)
text = "soma rank"
uppercase = true

[node name="HSeparator" type="HSeparator" parent="MarginContainer/HBoxContainer/VBoxContainer"]
layout_mode = 2
theme_override_styles/separator = SubResource("StyleBoxEmpty_l6cm7")

[node name="minus" type="Button" parent="MarginContainer/HBoxContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
theme_override_font_sizes/font_size = 50
text = "Subtração \"-\""

[node name="minus_normal" type="Button" parent="MarginContainer/HBoxContainer/VBoxContainer/minus"]
layout_mode = 0
offset_left = 426.00125
offset_top = 0.16161823
offset_right = 837.00134
offset_bottom = 77.16162
scale = Vector2(0.5346707, 0.5346707)
size_flags_horizontal = 4
theme_override_font_sizes/font_size = 50
text = "Normal"

[node name="minus_hard" type="Button" parent="MarginContainer/HBoxContainer/VBoxContainer/minus"]
layout_mode = 0
offset_left = 426.0013
offset_top = 45.616165
offset_right = 837.00134
offset_bottom = 122.616165
scale = Vector2(0.5346707, 0.5346707)
size_flags_horizontal = 4
theme_override_font_sizes/font_size = 50
text = "Difícil"

[node name="minus_rank" type="Label" parent="MarginContainer/HBoxContainer/VBoxContainer"]
layout_mode = 2
theme_override_colors/font_shadow_color = Color(0, 0, 0, 1)
text = "subtração rank"
uppercase = true

[node name="HSeparator2" type="HSeparator" parent="MarginContainer/HBoxContainer/VBoxContainer"]
layout_mode = 2
theme_override_styles/separator = SubResource("StyleBoxEmpty_l6cm7")

[node name="times" type="Button" parent="MarginContainer/HBoxContainer/VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 50
text = "Multiplicação \"X\""

[node name="times_normal" type="Button" parent="MarginContainer/HBoxContainer/VBoxContainer/times"]
layout_mode = 0
offset_left = 426.00128
offset_top = 0.3232422
offset_right = 837.0014
offset_bottom = 77.32324
scale = Vector2(0.5346707, 0.5346707)
size_flags_horizontal = 4
theme_override_font_sizes/font_size = 50
text = "Normal"

[node name="times_hard" type="Button" parent="MarginContainer/HBoxContainer/VBoxContainer/times"]
layout_mode = 0
offset_left = 426.00125
offset_top = 40.72728
offset_right = 837.0013
offset_bottom = 117.72728
scale = Vector2(0.5346707, 0.5346707)
size_flags_horizontal = 4
theme_override_font_sizes/font_size = 50
text = "Difícil"

[node name="times_rank" type="Label" parent="MarginContainer/HBoxContainer/VBoxContainer"]
layout_mode = 2
theme_override_colors/font_shadow_color = Color(0, 0, 0, 1)
text = "multiplicacao rank"
uppercase = true

[node name="HSeparator4" type="HSeparator" parent="MarginContainer/HBoxContainer/VBoxContainer"]
layout_mode = 2
theme_override_styles/separator = SubResource("StyleBoxEmpty_l6cm7")

[node name="div" type="Button" parent="MarginContainer/HBoxContainer/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 4
theme_override_font_sizes/font_size = 50
text = "     Divisão \"/\"       "

[node name="div_normal" type="Button" parent="MarginContainer/HBoxContainer/VBoxContainer/div"]
layout_mode = 0
offset_left = 425.00125
offset_top = 0.48485947
offset_right = 836.00134
offset_bottom = 77.48486
scale = Vector2(0.5346707, 0.5346707)
size_flags_horizontal = 4
theme_override_font_sizes/font_size = 50
text = "Normal"

[node name="div_hard" type="Button" parent="MarginContainer/HBoxContainer/VBoxContainer/div"]
layout_mode = 0
offset_left = 425.00128
offset_top = 45.939407
offset_right = 836.00134
offset_bottom = 122.93941
scale = Vector2(0.5346707, 0.5346707)
size_flags_horizontal = 4
theme_override_font_sizes/font_size = 50
text = "Difícil"

[node name="div_rank" type="Label" parent="MarginContainer/HBoxContainer/VBoxContainer"]
layout_mode = 2
theme_override_colors/font_shadow_color = Color(0, 0, 0, 1)
text = "divisao rank"
uppercase = true

[node name="HSeparator3" type="HSeparator" parent="MarginContainer/HBoxContainer/VBoxContainer"]
layout_mode = 2
theme_override_styles/separator = SubResource("StyleBoxEmpty_l6cm7")

[node name="all" type="Button" parent="MarginContainer/HBoxContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
theme_override_font_sizes/font_size = 50
text = "Todos"

[node name="all_normal" type="Button" parent="MarginContainer/HBoxContainer/VBoxContainer/all"]
layout_mode = 0
offset_left = 426.00128
offset_top = 2.6666822
offset_right = 837.00134
offset_bottom = 79.66668
scale = Vector2(0.5346707, 0.5346707)
size_flags_horizontal = 4
theme_override_font_sizes/font_size = 50
text = "Normal"

[node name="all_hard" type="Button" parent="MarginContainer/HBoxContainer/VBoxContainer/all"]
layout_mode = 0
offset_left = 426.00128
offset_top = 49.131332
offset_right = 837.00134
offset_bottom = 126.13133
scale = Vector2(0.5346707, 0.5346707)
size_flags_horizontal = 4
theme_override_font_sizes/font_size = 50
text = "Difícil"

[node name="all_rank" type="Label" parent="MarginContainer/HBoxContainer/VBoxContainer"]
layout_mode = 2
theme_override_colors/font_shadow_color = Color(0, 0, 0, 1)
text = "todas rank"
uppercase = true

[node name="back" type="Button" parent="."]
layout_mode = 0
offset_left = 816.0
offset_top = 599.0
offset_right = 1234.0
offset_bottom = 676.0
size_flags_vertical = 3
theme_override_font_sizes/font_size = 50
text = "Voltar"

[node name="Animação" type="AnimationPlayer" parent="."]
libraries = {
&"": SubResource("AnimationLibrary_wu84c")
}
autoplay = "reveal"

[node name="buttonclick" type="AudioStreamPlayer" parent="."]
process_priority = 1
stream = ExtResource("3_4sgra")
volume_db = -20.0
bus = &"sfx"

[node name="mouse_entered" type="AudioStreamPlayer" parent="."]
stream = ExtResource("4_a86st")
volume_db = -20.0
bus = &"sfx"

[node name="Musica2" type="CheckButton" parent="."]
visible = false
layout_mode = 0
offset_left = 910.0
offset_top = 477.0
offset_right = 1061.0
offset_bottom = 508.0
scale = Vector2(2.425, 2.425)
button_pressed = true
text = "Musica Menu"

[connection signal="pressed" from="MarginContainer/HBoxContainer/VBoxContainer/sum" to="." method="_on_sum_pressed"]
[connection signal="pressed" from="MarginContainer/HBoxContainer/VBoxContainer/sum/sum_normal" to="." method="_on_sum_normal_pressed"]
[connection signal="pressed" from="MarginContainer/HBoxContainer/VBoxContainer/sum/sum_hard" to="." method="_on_sum_hard_pressed"]
[connection signal="pressed" from="MarginContainer/HBoxContainer/VBoxContainer/minus" to="." method="_on_minus_pressed"]
[connection signal="pressed" from="MarginContainer/HBoxContainer/VBoxContainer/minus/minus_normal" to="." method="_on_minus_normal_pressed"]
[connection signal="pressed" from="MarginContainer/HBoxContainer/VBoxContainer/minus/minus_hard" to="." method="_on_minus_hard_pressed"]
[connection signal="pressed" from="MarginContainer/HBoxContainer/VBoxContainer/times" to="." method="_on_times_pressed"]
[connection signal="pressed" from="MarginContainer/HBoxContainer/VBoxContainer/times/times_normal" to="." method="_on_times_normal_pressed"]
[connection signal="pressed" from="MarginContainer/HBoxContainer/VBoxContainer/times/times_hard" to="." method="_on_times_hard_pressed"]
[connection signal="pressed" from="MarginContainer/HBoxContainer/VBoxContainer/div" to="." method="_on_div_pressed"]
[connection signal="pressed" from="MarginContainer/HBoxContainer/VBoxContainer/div/div_normal" to="." method="_on_div_normal_pressed"]
[connection signal="pressed" from="MarginContainer/HBoxContainer/VBoxContainer/div/div_hard" to="." method="_on_div_hard_pressed"]
[connection signal="pressed" from="MarginContainer/HBoxContainer/VBoxContainer/all" to="." method="_on_all_pressed"]
[connection signal="pressed" from="MarginContainer/HBoxContainer/VBoxContainer/all/all_normal" to="." method="_on_all_normal_pressed"]
[connection signal="pressed" from="MarginContainer/HBoxContainer/VBoxContainer/all/all_hard" to="." method="_on_all_hard_pressed"]
[connection signal="pressed" from="back" to="." method="_on_back_pressed"]
[connection signal="toggled" from="Musica2" to="." method="_on_musica_2_toggled"]
